--- a/views/administrar_estudiantes.ejs
+++ b/views/administrar_estudiantes.ejs
@@ -157,6 +157,7 @@
                     </tr>
                 </thead>
                 <tbody>
+                    
                     <tr>
                         <td>1</td>
                         <td>John Doe</td>
@@ -166,7 +167,7 @@
                             <a href="/estudiantes/eliminar/1">Eliminar</a>
                         </td>
                     </tr>
-                    <!-- Aquí se mostrarían los demás estudiantes -->
+                    <!-- Iterar sobre los cursos -->
                 </tbody>
             </table>
 
