--- a/views/usuariose.ejs
+++ b/views/usuariose.ejs
@@ -84,6 +84,7 @@
                 <input type="text" name="nombre" class="form-control" required>
               </div>
               <div class="form-group">
+                <p class="text-danger">Error usuario invalido</p>
                 <label for="email">Email:</label>
                 <input type="email" name="email" class="form-control" required>
               </div>
