Se incorpora iframe
El servicio de iframe para compartir share point desde la web, con esto saltamos los pasos de la creación de la pagina en html y subirla a algún host

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -135,6 +135,17 @@
           <h2>Testimonials</h2>
           <p>What are they saying</p>
         </div>
+        <div>
+          <iframe width="100%" 
+          height="1500px" 
+          src="https://academiausbbogedu.sharepoint.com/:u:/r/sites/LEARNING4ALL19/SitePages/Home.aspx?csf=1&web=1&share=Ec1XEUpmn3BJmADw4uXuFFMBCMYd2E2procpwlJoeQl-xg&e=rYnZfw" 
+          title="Share pont view" 
+          frameborder="0"
+          scrolling="no" 
+          seamless="seamless"  
+          overflow:hidden;
+          allowfullscreen></iframe>
+        </div>
 
         <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
           <div class="swiper-wrapper">
