--- a/views/course-details.ejs
+++ b/views/course-details.ejs
@@ -72,7 +72,15 @@
 
         <div class="row">
           <div class="col-lg-8">
-            <img src="/img/course-details.jpg" class="img-fluid" alt="">
+            <div>
+              <iframe width="740" 
+            height="415" 
+            src="https://www.youtube.com/embed/L1oMLsiMusQ?si=FMZ_TYTVCF2zpNUD" 
+            title="YouTube video player" 
+            frameborder="0" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+            allowfullscreen></iframe>
+            </div>
             <h3>Et enim incidunt fuga tempora</h3>
             <p>
               Qui et explicabo voluptatem et ab qui vero et voluptas. Sint voluptates temporibus quam autem. Atque nostrum voluptatum laudantium a doloremque enim et ut dicta. Nostrum ducimus est iure minima totam doloribus nisi ullam deserunt. Corporis aut officiis sit nihil est. Labore aut sapiente aperiam.
