--- a/views/usuariost.ejs
+++ b/views/usuariost.ejs
@@ -79,13 +79,15 @@
         <div class="row">
           <div class="col-lg-6 offset-lg-3">
             <form action="/registrar" method="POST">
-              <div class="form-group col-sm">
+                <div class="row">
+                <div class="form-group col-sm">
                 <label for="nombre">Nombre:</label>
                 <input type="text" name="nombre" class="form-control" required>
                 </div>
                 <div class="form-group col-sm">
                 <label for="apellido">Apellido:</label>
                 <input type="text" name="apellido" class="form-control" required>
+              </div>
               </div>
               <div class="form-group">
                 <label for="region">Region</label>
@@ -119,13 +121,13 @@
             </form>
           </div>
           <div>
-            <iframe
-                id="inlineFrameExample"
-                title="youtube"
-                width="80%"
-                height="500px"
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3976.1074189917767!2d-74.03250378960261!3d4.75136639520391!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e3f8f7df50575cd%3A0xd21bdff9aaaa136!2sUniversidad%20De%20San%20Buenaventura!5e0!3m2!1ses-419!2sco!4v1697758975619!5m2!1ses-419!2sco"
-            ></iframe>
+            <iframe width="560" 
+            height="315" 
+            src="https://www.openstreetmap.org/export/embed.html?bbox=-0.004017949104309083%2C51.47612752641776%2C0.00030577182769775396%2C51.478569861898606&layer=mapnik" 
+            title="YouTube video player" 
+            frameborder="0" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+            allowfullscreen></iframe>
           </div>
         </div>
       </div>
