--- a/views/usuariose.ejs
+++ b/views/usuariose.ejs
@@ -74,31 +74,64 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 style="color: #0b245a; font-size: 36px; font-weight: bold; margin-bottom: 5rem;">Registrarse en Learnig<span style="color: #e63946;">4</span>All</h2>
+            <h2 style="color: red; font-size: 17px; font-weight: bold;">Error usuario invalido</h2>
           </div>
         </div>
         <div class="row">
           <div class="col-lg-6 offset-lg-3">
             <form action="/registrar" method="POST">
-              <div class="form-group">
+                <div class="row">
+                <div class="form-group col-sm">
                 <label for="nombre">Nombre:</label>
                 <input type="text" name="nombre" class="form-control" required>
+                </div>
+                <div class="form-group col-sm">
+                <label for="apellido">Apellido:</label>
+                <input type="text" name="apellido" class="form-control" required>
+              </div>
               </div>
               <div class="form-group">
-                <p class="text-danger">Error usuario invalido</p>
+                <label for="region">Region</label>
+                <select name="region" class="form-control" required>
+                    <option value="Colombia">Colombia</option>
+                    <option value="NA">NA</option>
+                </select>
+              </div>
+              <div class="form-group">
+                <label for="ocupacion">Ocupacion</label>
+                <select name="ocupacion" class="form-control" required>
+                    <option value="estudiante">Estudiante</option>
+                    <option value="profesor">Profesor</option>
+                    <option value="Desarrollador de proyectos independintes">Desarrollador de proyectos independintes</option>
+                    <option value="Administrador de proyecto">Administrador de proyecto</option>
+                    <option value="NA">NA</option>
+                </select>
+              </div>
+              <div class="form-group">
                 <label for="email">Email:</label>
                 <input type="email" name="email" class="form-control" required>
               </div>
               <div class="form-group">
                 <label for="password">Contraseña:</label>
                 <input type="password" name="password" class="form-control" required>
+                <label for="password2">Repetir contraseña:</label>
+                <input type="password" name="password2" class="form-control" required>
+                <script>
+                  function validarContra() 
+                  {
+                  password = document.getElementById('password');
+                  password2 = document.getElementById('password2');
+                  let passwordf = password;
+                  if (password != password2){
+                    document.body.innerHTML = "Contraseña erronea";
+                  } else {
+                    return passwordf;
+                  }
+                  }
+                </script>
+                </script>
               </div>
-              <div class="form-group">
-                <label for="tipo">Tipo de usuario:</label>
-                <select name="tipo" class="form-control" required>
-                  <option value="estudiante">Estudiante</option>
-                  <option value="administrador">Administrador</option>
-                </select>
-              </div>
+              <p> <br> </p>
               <button type="submit" class="btn btn-primary">Registrarse</button>  
             </form>
           </div>
