nueva vista profesor
Se añadio la vista de profesor y se configura

--- a/views/administrar_cursos.ejs
+++ b/views/administrar_cursos.ejs
@@ -95,6 +95,31 @@
 </head>
 
 <body>
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="/">Learnig4All</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/estudiantes">Administrar Estudiantes</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/cursos">Administrar Cursos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/perfil">Mi perfil</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/cerrar-sesion">Cerrar sesión</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>     
+</header>
     <div class="container">
         <h1>Administrar Cursos</h1>
 
