--- a/views/course-details.ejs
+++ b/views/course-details.ejs
@@ -92,7 +92,7 @@
 
             <div class="course-info d-flex justify-content-between align-items-center">
               <h5>Trainer</h5>
-              <p><a href="#">Walter White</a></p>
+              <p><a href="/perfiles.html">Walter White</a></p>
             </div>
 
             <div class="course-info d-flex justify-content-between align-items-center">
