--- a/views/administrar_estudiantes.ejs
+++ b/views/administrar_estudiantes.ejs
@@ -142,7 +142,29 @@
 
 <body>
     <header>
-        <!-- ... Código del encabezado ... -->
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <a class="navbar-brand" href="/">Learnig4All</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="/estudiantes">Administrar Estudiantes</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/cursos">Administrar Cursos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/perfil">Mi perfil</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/cerrar-sesion">Cerrar sesión</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>     
     </header>
     <main>
         <div class="admin-section">
