--- a/views/usuariose.ejs
+++ b/views/usuariose.ejs
@@ -74,13 +74,13 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 style="color: #0b245a; font-size: 36px; font-weight: bold; margin-bottom: 5rem;">Registrarse en Learnig<span style="color: #e63946;">4</span>All</h2>
-            <h2 style="color: red; font-size: 17px; font-weight: bold;">Error usuario invalido</h2>
           </div>
         </div>
         <div class="row">
           <div class="col-lg-6 offset-lg-3">
             <form action="/registrar" method="POST">
                 <div class="row">
+                  <p class="alert alert-danger ">Error usuario invalido</p>
                 <div class="form-group col-sm">
                 <label for="nombre">Nombre:</label>
                 <input type="text" name="nombre" class="form-control" required>
@@ -114,20 +114,32 @@
               <div class="form-group">
                 <label for="password">Contraseña:</label>
                 <input type="password" name="password" class="form-control" required>
+                <!--<p id="noCoin" class="alert alert-danger ocultar">Las Contraseñas no coinciden, vuelve a intentarlo!</p>
                 <label for="password2">Repetir contraseña:</label>
                 <input type="password" name="password2" class="form-control" required>
+                --> 
+                <style>
+                  .ocultar{
+                    display: none;
+                  }
+                  .mostrar{
+                    display: block;
+                  }
+                </style>
                 <script>
-                  function validarContra() 
+                 /* function validarContra() 
                   {
                   password = document.getElementById('password');
                   password2 = document.getElementById('password2');
-                  let passwordf = password;
+                  passwordf = document.getElementById('passwordf')
                   if (password != password2){
-                    document.body.innerHTML = "Contraseña erronea";
+                    document.getElementById("noCoin").classList.add("mostrar");
                   } else {
+                    document.getElementById("noCoin").classList.add("ocultar");
+                    let passwordf = password;
                     return passwordf;
                   }
-                  }
+                  } */
                 </script>
                 </script>
               </div>
@@ -138,7 +150,6 @@
         </div>
       </div>
     </section>
-    
   
     <footer id="footer">
 
