--- a/views/usuariost.ejs
+++ b/views/usuariost.ejs
@@ -74,6 +74,7 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 style="color: #0b245a; font-size: 36px; font-weight: bold; margin-bottom: 5rem;">Registrarse en Learnig<span style="color: #e63946;">4</span>All</h2>
+            <h2 style="color: red; font-size: 17px; font-weight: bold;">Error usuario invalido</h2>
           </div>
         </div>
         <div class="row">
@@ -99,8 +100,8 @@
               <div class="form-group">
                 <label for="ocupacion">Ocupacion</label>
                 <select name="ocupacion" class="form-control" required>
-                    <option value="Estudiante">Estudiante</option>
-                    <option value="Profesor">Profesor</option>
+                    <option value="estudiante">Estudiante</option>
+                    <option value="profesor">Profesor</option>
                     <option value="Desarrollador de proyectos independintes">Desarrollador de proyectos independintes</option>
                     <option value="Administrador de proyecto">Administrador de proyecto</option>
                     <option value="NA">NA</option>
@@ -113,22 +114,33 @@
               <div class="form-group">
                 <label for="password">Contraseña:</label>
                 <input type="password" name="password" class="form-control" required>
+                <!--<p id="noCoin" class="alert alert-danger ocultar">Las Contraseñas no coinciden, vuelve a intentarlo!</p>
                 <label for="password2">Repetir contraseña:</label>
                 <input type="password" name="password2" class="form-control" required>
+                --> 
+                <style>
+                  .ocultar{
+                    display: none;
+                  }
+                  .mostrar{
+                    display: block;
+                  }
+                </style>
                 <script>
-                  function validarContra() 
+                 /* function validarContra() 
                   {
                   password = document.getElementById('password');
                   password2 = document.getElementById('password2');
-
+                  passwordf = document.getElementById('passwordf')
                   if (password != password2){
-                    document.body.innerHTML = "Contraseña erronea";
+                    document.getElementById("noCoin").classList.add("mostrar");
                   } else {
-                    const passwordf = [...document.querySelectorAll('[id=password]')];
-                    passwordf.setAttribute("id","paswordf")
+                    document.getElementById("noCoin").classList.add("ocultar");
+                    let passwordf = password;
                     return passwordf;
                   }
-                  }
+                  } */
+                </script>
                 </script>
               </div>
               <p> <br> </p>
@@ -138,7 +150,6 @@
         </div>
       </div>
     </section>
-    
   
     <footer id="footer">
 
