Seccion de trabaja con nosotros
Cree la seccion de trabaja con nosotros en la vista de profesor y en la vista de about

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -132,12 +132,12 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Testimonials</h2>
-          <p>What are they saying</p>
+          <h2>Nuestro proyecto</h2>
+          <p>Aprende del desarrollo de Learning<span style="color: #e63946;">4</span>ALL</p>
         </div>
         <div>
           <iframe width="100%" 
-          height="1500px" 
+          height="1000px" 
           src="https://academiausbbogedu.sharepoint.com/:u:/r/sites/LEARNING4ALL19/SitePages/Home.aspx?csf=1&web=1&share=Ec1XEUpmn3BJmADw4uXuFFMBCMYd2E2procpwlJoeQl-xg&e=rYnZfw" 
           title="Share pont view" 
           frameborder="0"
@@ -147,87 +147,57 @@
           allowfullscreen></iframe>
         </div>
 
-        <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
-          <div class="swiper-wrapper">
+        <div><br></div>
 
-            <div class="swiper-slide">
-              <div class="testimonial-wrap">
-                <div class="testimonial-item">
-                  <img src="/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
-                  <h3>Saul Goodman</h3>
-                  <h4>Ceo &amp; Founder</h4>
-                  <p>
-                    <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                    Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
-                    <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                  </p>
+        <section id="profesor-tabs" class="profesor-tabs bg-primary" style="--bs-bg-opacity: .4;">
+          <div class="container" data-aos="fade-up">
+    
+            <div class="row">
+              <div class="col-lg-12 text-center">
+                <h2 style="color: #0b245a; font-size: 36px; font-weight: bold; margin-bottom: 5rem;">WORK <span style="color: #e63946;">4</span>US</h2>
+              </div>
+            </div>
+           <div>
+            <form action="/Contactar-profe" method="post">
+    
+              <div class="row">
+                <div class="form-group col-sm">
+                  <label for="nombre" style="color: black;">Nombre:</label>
+                  <input type="text" name="nombre" class="form-control" required>
+                </div>
+                <div class="form-group col-sm">
+                  <label for="apellido" style="color: black;">Primer apellido:</label>
+                  <input type="text" name="apellido1" class="form-control" >
+                </div>
+                <div class="form-group col-sm">
+                  <label for="apellido" style="color: black;">Segundo apellido:</label>
+                  <input type="text" name="apellido2" class="form-control" >
                 </div>
               </div>
-            </div><!-- End testimonial item -->
-
-            <div class="swiper-slide">
-              <div class="testimonial-wrap">
-                <div class="testimonial-item">
-                  <img src="/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
-                  <h3>Sara Wilsson</h3>
-                  <h4>Designer</h4>
-                  <p>
-                    <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                    Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
-                    <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                  </p>
+              <div class="row" style="padding-top: 7px;">
+                <div class="form-group col-sm">
+                  <label for="region" style="color: black;">Teléfono</label>
+                  <input type="text" name="telefono" class="form-control">
+                </div>
+                <div class="form-group col-sm">
+                  <label for="region" style="color: black;">E-mail</label>
+                  <input type="text" name="email" class="form-control" >
+                </div>
+                <div class="form-group col-sm">
+                  <label for="region" style="color: black;">Pais</label>
+                  <input type="text" name="pais" class="form-control" >
                 </div>
               </div>
-            </div><!-- End testimonial item -->
-
-            <div class="swiper-slide">
-              <div class="testimonial-wrap">
-                <div class="testimonial-item">
-                  <img src="/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
-                  <h3>Jena Karlis</h3>
-                  <h4>Store Owner</h4>
-                  <p>
-                    <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                    Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.
-                    <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                  </p>
-                </div>
+              <div class="form-group" style="padding-top: 7px;">
+                <label for="region" style="color: black;">Cuentanos por que quieres trabajar con nosotros</label>
+                <input type="text" name="horas disponibles" class="form-control" >
               </div>
-            </div><!-- End testimonial item -->
-
-            <div class="swiper-slide">
-              <div class="testimonial-wrap">
-                <div class="testimonial-item">
-                  <img src="/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
-                  <h3>Matt Brandon</h3>
-                  <h4>Freelancer</h4>
-                  <p>
-                    <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                    Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.
-                    <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                  </p>
-                </div>
-              </div>
-            </div><!-- End testimonial item -->
-
-            <div class="swiper-slide">
-              <div class="testimonial-wrap">
-                <div class="testimonial-item">
-                  <img src="/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
-                  <h3>John Larson</h3>
-                  <h4>Entrepreneur</h4>
-                  <p>
-                    <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                    Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam enim culpa labore duis sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.
-                    <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                  </p>
-                </div>
-              </div>
-            </div><!-- End testimonial item -->
-
+    
+            </form>
+    
+           </div> 
           </div>
-          <div class="swiper-pagination"></div>
-        </div>
+        </section><!-- End Cource Details Tabs Section -->
 
       </div>
     </section><!-- End Testimonials Section -->
