--- a/views/perfil_profesional.ejs
+++ b/views/perfil_profesional.ejs
@@ -63,6 +63,7 @@
       <div class="container">
         <br>
         <h2>Profesores</h2>
+        <p>Todos los profesores cuentan con los estandares mas altos</p>
       </div>
     </div><!-- End Breadcrumbs -->
 
@@ -124,15 +125,53 @@
     </section><!-- End Cource Details Section -->
 
     <!-- ======= Cource Details Tabs Section ======= -->
-    <section id="cource-details-tabs" class="cource-details-tabs">
+    <section id="profesor-tabs" class="profesor-tabs bg-primary" style="--bs-bg-opacity: .4;">
       <div class="container" data-aos="fade-up">
 
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 style="color: #0b245a; font-size: 36px; font-weight: bold; margin-bottom: 5rem;">Trabaja con nosotros</h2>
+            <h2 style="color: #0b245a; font-size: 36px; font-weight: bold; margin-bottom: 5rem;">WORK <span style="color: #e63946;">4</span>US</h2>
           </div>
         </div>
+       <div>
+        <form action="/Contactar-profe" method="post">
 
+          <div class="row">
+            <div class="form-group col-sm">
+              <label for="nombre" style="color: black;">Nombre:</label>
+              <input type="text" name="nombre" class="form-control" required>
+            </div>
+            <div class="form-group col-sm">
+              <label for="apellido" style="color: black;">Primer apellido:</label>
+              <input type="text" name="apellido1" class="form-control" >
+            </div>
+            <div class="form-group col-sm">
+              <label for="apellido" style="color: black;">Segundo apellido:</label>
+              <input type="text" name="apellido2" class="form-control" >
+            </div>
+          </div>
+          <div class="row" style="padding-top: 7px;">
+            <div class="form-group col-sm">
+              <label for="region" style="color: black;">Teléfono</label>
+              <input type="text" name="telefono" class="form-control">
+            </div>
+            <div class="form-group col-sm">
+              <label for="region" style="color: black;">E-mail</label>
+              <input type="text" name="email" class="form-control" >
+            </div>
+            <div class="form-group col-sm">
+              <label for="region" style="color: black;">Pais</label>
+              <input type="text" name="pais" class="form-control" >
+            </div>
+          </div>
+          <div class="form-group" style="padding-top: 7px;">
+            <label for="region" style="color: black;">Cuentanos por que quieres trabajar con nosotros</label>
+            <input type="text" name="horas disponibles" class="form-control" >
+          </div>
+
+        </form>
+
+       </div> 
       </div>
     </section><!-- End Cource Details Tabs Section -->
 
