--- a/views/about.ejs
+++ b/views/about.ejs
@@ -192,6 +192,13 @@
                 <label for="region" style="color: black;">Cuentanos por que quieres trabajar con nosotros</label>
                 <input type="text" name="horas disponibles" class="form-control" >
               </div>
+              <div>
+                <br>
+                <p><input type="checkbox" required> Acepta nuestros <a href="#">terminos y condiciones</a> de tratamiento de datos</p>
+              </div>
+              <div>
+                <button type="submit" class="btn btn-primary">Enviar</button>
+              </div>
     
             </form>
     
