--- a/views/usuariose.ejs
+++ b/views/usuariose.ejs
@@ -114,10 +114,10 @@
               <div class="form-group">
                 <label for="password">Contraseña:</label>
                 <input type="password" name="password" class="form-control" required>
-                <!--<p id="noCoin" class="alert alert-danger ocultar">Las Contraseñas no coinciden, vuelve a intentarlo!</p>
+                <p id="noCoin" class="alert alert-danger ocultar">Las Contraseñas no coinciden, vuelve a intentarlo!</p>
                 <label for="password2">Repetir contraseña:</label>
-                <input type="password" name="password2" class="form-control" required>
-                --> 
+                <input type="password" name="password2" class="form-control">
+                
                 <style>
                   .ocultar{
                     display: none;
@@ -127,7 +127,7 @@
                   }
                 </style>
                 <script>
-                 /* function validarContra() 
+                 function validarContra() 
                   {
                   password = document.getElementById('password');
                   password2 = document.getElementById('password2');
@@ -139,11 +139,13 @@
                     let passwordf = password;
                     return passwordf;
                   }
-                  } */
+                  }
                 </script>
                 </script>
               </div>
-              <p> <br> </p>
+              <P> </P>
+              <p><input type="checkbox" required> Acepta nuestros <a href="#">terminos y condiciones</a> de tratamiento de datos</p>
+              <p> </p>
               <button type="submit" class="btn btn-primary">Registrarse</button>  
             </form>
           </div>
