--- a/views/perfil_profesional.ejs
+++ b/views/perfil_profesional.ejs
@@ -139,7 +139,7 @@
           <div class="row">
             <div class="form-group col-sm">
               <label for="nombre" style="color: black;">Nombre:</label>
-              <input type="text" name="nombre" class="form-control" required>
+              <input type="text" name="nombre" class="form-control">
             </div>
             <div class="form-group col-sm">
               <label for="apellido" style="color: black;">Primer apellido:</label>
@@ -167,6 +167,13 @@
           <div class="form-group" style="padding-top: 7px;">
             <label for="region" style="color: black;">Cuentanos por que quieres trabajar con nosotros</label>
             <input type="text" name="horas disponibles" class="form-control" >
+          </div>
+          <div>
+            <br>
+            <p><input type="checkbox" required> Acepta nuestros <a href="#">terminos y condiciones</a> de tratamiento de datos</p>
+          </div>
+          <div>
+            <button type="submit" class="btn btn-primary">Enviar</button>
           </div>
 
         </form>
