poner mas bonito
comentariar unas lineas y poner una imagen

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -59,8 +59,12 @@
     <!-- ======= Breadcrumbs ======= -->
     <div class="breadcrumbs" data-aos="fade-in">
       <div class="container">
-        <h2>Quinenes somos?</h2>
-        <p>En Learnig4All, somos una plataforma de educación en línea comprometida en brindar a las personas las habilidades y conocimientos necesarios para destacarse en el campo de la tecnología. Nuestro objetivo principal es fomentar el aprendizaje continuo y accesible, permitiendo a nuestros estudiantes adquirir las competencias necesarias para prosperar en el ámbito de desarrollo FullStack.
+        <h2>Aprende sobre sosotros!</h2>
+        <p>En Learnig4All, somos una plataforma de educación en línea comprometida en brindar a 
+          las personas las habilidades y conocimientos necesarios para destacarse en el campo de 
+          la tecnología. Nuestro objetivo principal es fomentar el aprendizaje continuo y 
+          accesible, permitiendo a nuestros estudiantes adquirir las competencias necesarias para 
+          prosperar en el ámbito de desarrollo.
 
            </p>
       </div>
@@ -73,11 +77,25 @@
         <div class="row">
           <div class="col-lg-6 order-1 order-lg-2" data-aos="fade-left" data-aos-delay="100">
             <img src="/img/about.jpg" class="img-fluid" alt="">
+            <p> </p>
+            <h3>Objetivos</h3>
+            <p class="fst-italic">
+              Desarrollar una plataforma web para el aprendizaje enfocado en el desarrollo de software. 
+            </p>
+            <ul>
+              <p><i class="bi bi-check-circle"></i> Establecer la conexión entre la pagina web y la base de datos.</p>
+              <p><i class="bi bi-check-circle"></i> Elaborar una pagina web que permita el registro de usuarios.</p>
+              <p><i class="bi bi-check-circle"></i> Crear interfases de usuario para las necesidades de la pagina.</p>
+            </ul>
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content">
             <h3>Sobre Nosostros.</h3>
             <p class="fst-italic">
-              Nos enorgullece contar con un equipo de instructores altamente calificados y experimentados en la industria tecnológica. Nuestros instructores no solo poseen un amplio conocimiento en las últimas tecnologías y herramientas FullStack, sino que también están comprometidos en brindar una experiencia de aprendizaje enriquecedora y efectiva.
+              Nos enorgullece contar con un equipo de instructores altamente calificados y 
+              experimentados en la industria tecnológica. Nuestros instructores no solo 
+              poseen un amplio conocimiento en las últimas tecnologías y herramientas 
+              FullStack, sino que también están comprometidos en brindar una experiencia 
+              de aprendizaje enriquecedora y efectiva.
             </p>
             <ul>
               <li><i class="bi bi-check-circle"></i> En Learnig4All, creemos en el enfoque práctico y orientado a proyectos. Nuestros cursos se basan en prácticas reales y proyectos desafiantes que permiten a los estudiantes aplicar lo aprendido y desarrollar habilidades prácticas. Fomentamos la creatividad y la resolución de problemas, brindando a nuestros estudiantes la confianza y las capacidades necesarias para enfrentar desafíos del mundo real..</li>
@@ -87,7 +105,7 @@
               <li><i class="bi bi-check-circle"></i> En resumen, en Learnig4All nos apasiona brindar educación en tecnología de alta calidad y transformar vidas a través del aprendizaje. Estamos comprometidos en impulsar el crecimiento personal y profesional de nuestros estudiantes, equipándolos con las habilidades necesarias para tener éxito en el campo FullStack y abrirse camino en la industria tecnológica en constante evolución..</li>
             </ul>
             <p>
-              Ul
+              
             </p>
 
           </div>
@@ -95,7 +113,13 @@
 
       </div>
     </section><!-- End About Section -->
-
+    <section id="integrantes" class="integrantes">
+      <div>
+        <div>
+          <img src="/img/integrantes.png" alt="">
+        </div>
+      </div>
+    </section>
     <!-- ======= Counts Section ======= -->
     <section id="counts" class="counts section-bg">
       <div class="container">
@@ -136,6 +160,7 @@
           <p>Aprende del desarrollo de Learning<span style="color: #e63946;">4</span>ALL</p>
         </div>
         <div>
+          <!--
           <iframe width="100%" 
           height="1000px" 
           src="https://academiausbbogedu.sharepoint.com/:u:/r/sites/LEARNING4ALL19/SitePages/Home.aspx?csf=1&web=1&share=Ec1XEUpmn3BJmADw4uXuFFMBCMYd2E2procpwlJoeQl-xg&e=rYnZfw" 
@@ -145,6 +170,7 @@
           seamless="seamless"  
           overflow:hidden;
           allowfullscreen></iframe>
+          -->
         </div>
 
         <div><br></div>
