--- a/views/courses.ejs
+++ b/views/courses.ejs
@@ -76,15 +76,20 @@
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="course-item">
-              <img src="/img/course-1.jpg" class="img-fluid" alt="...">
+              <img src="/img/curso-javac.png" class="img-fluid" alt="...">
               <div class="course-content">
                 <div class="d-flex justify-content-between align-items-center mb-3">
-                  <h4>Curso de Desarrollo Web FullStack:</h4>
-                  <p class="price">$169</p>
+                  <h4>Corso manejo de Java</h4>
+                  <p class="price">Free</p>
                 </div>
 
-                <h3><a href="course-details.html">Website Design</a></h3>
-                <p>Este curso te enseñará los fundamentos del desarrollo web tanto en el lado del cliente (Front-end) como en el lado del servidor (Back-end). Aprenderás a construir aplicaciones web interactivas utilizando tecnologías modernas como HTML, CSS, JavaScript, Node.js y bases de datos relacionales</p>
+                <h3><a href="course-details.html">Curso Principos básicos Java</a></h3>
+                <p>
+                  Este curso te enseñará los fundamentos del desarrollo con java para 
+                  aplicaciones de escritorio, pasndo por todos los fundamentos de el 
+                  propio lenguaje y sus diferentes IDE. Aprenderas objetos, iteraciones,
+                  clases, etc.
+                </p>
                 <div class="trainer d-flex justify-content-between align-items-center">
                   <div class="trainer-profile d-flex align-items-center">
                     <img src="/img/trainers/trainer-1.jpg" class="img-fluid" alt="">
@@ -102,14 +107,14 @@
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
             <div class="course-item">
-              <img src="/img/course-2.jpg" class="img-fluid" alt="...">
+              <img src="/img/curso-html-y-cssc.png" class="img-fluid" alt="...">
               <div class="course-content">
                 <div class="d-flex justify-content-between align-items-center mb-3">
-                  <h4>Curso de Aplicaciones Móviles FullStack:</h4>
-                  <p class="price">$250</p>
+                  <h4>Curso manejo Web (Html)</h4>
+                  <p class="price">Free</p>
                 </div>
 
-                <h3><a href="course-details.html">Curso de Aplicaciones Móviles FullStack:</a></h3>
+                <h3><a href="course-detailsh.html">Curso Principos básicos HTML - CSS</a></h3>
                 <p>se centra en la creación de aplicaciones móviles completas, desde la interfaz de usuario hasta la lógica del servidor. Aprenderás a desarrollar aplicaciones móviles multiplataforma utilizando frameworks como React Native o Flutter, combinados con tecnologías de backend como Node.js.</p>
                 <div class="trainer d-flex justify-content-between align-items-center">
                   <div class="trainer-profile d-flex align-items-center">
@@ -128,14 +133,14 @@
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
             <div class="course-item">
-              <img src="/img/course-3.jpg" class="img-fluid" alt="...">
+              <img src="/img/curso-sqlc.png" class="img-fluid" alt="...">
               <div class="course-content">
                 <div class="d-flex justify-content-between align-items-center mb-3">
-                  <h4>E-commerce FullStack</h4>
-                  <p class="price">$180</p>
+                  <h4>Curso manejo bases de datos relacionales</h4>
+                  <p class="price">Free</p>
                 </div>
 
-                <h3><a href="course-details.html">Curso de Desarrollo de E-commerce FullStack </a></h3>
+                <h3><a href="course-detailss.html">Curso Principos básicos MySQL</a></h3>
                 <p>En este curso, te sumergirás en el mundo del comercio electrónico y aprenderás a construir tu propia tienda en línea. Explorarás diferentes tecnologías y frameworks populares para el desarrollo de e-commerce, como Magento, WooCommerce o Shopify, combinados con herramientas de desarrollo frontend y backend. .</p>
                 <div class="trainer d-flex justify-content-between align-items-center">
                   <div class="trainer-profile d-flex align-items-center">
